2005-07-15  Tom Tromey  <tromey@redhat.com>

	* lib/libgcj.omit: Removed.

2005-07-15  Lillian Angel  <langel@redhat.com>
	* javax/swing/plaf/basic/BasicTreeUI.java
	(mouseClicked): changed to use getPathBounds.
	(getPathBounds): Implemented

2005-07-15  Lillian Angel  <langel@redhat.com>
	* javax/swing/plaf/basic/BasicTreeUI.java
	(mouseClicked): check if user is clicking within the bounds of the cell.
	(getCellLocation): Implemented to return the location of the cell.

2005-07-15  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/plaf/metal/MetalComboBoxIcon.java: new file.

2005-07-15  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/tree/TreePath.java: added API docs all over,
	(TreePath(Object[])): throw IllegalArgumentException for null argument,
	(TreePath(TreePath, Object)): throw NullPointerException for null Object,
	(equals): test elements using equals(),
	(writeObject): removed,
	(readObject): removed,
	(getPath): return a clone of the path,
	(getPathComponent): throw IllegalArgumentException for invalid position,
	(isDescendant): reimplemented.

2005-07-15  Roman Kennke  <roman@kennke.org>

	* javax/swing/plaf/basic/BasicOptionPaneUI.java
	(ButtonAreaLayout): Made class static.
	(ButtonAreaLayout.setSyncAllWidths): Removed revalidate(). Never
	ever revalidate something within a LayoutManager!
	(ButtonAreaLayout.setPadding): Likewise.
	(ButtonAreaLayout.setCentersChildren): Likewise.
	(ButtonAreaLayout.layoutContainer): Don't refer to enclosing
	class's instance, this is not allowed in static inner classes.

2005-07-15  Roman Kennke  <roman@kennke.org>

	* javax/swing/plaf/metal/MetalCheckBoxIcon.java:
	New class. An icon implementation for use in JCheckBoxes.
	* javax/swing/plaf/metal/MetalBorders.java
	Renamed MetalButtonBorder to ButtonBorder.

2005-07-15  Anthony Balkissoon  <abalkiss@redhat.com>

	* javax/swing/plaf/basic/BasicTextUI.java:
	(RootView.removeUpdate): Properly update the caret position after text