@@ -1,5 +1,9 @@
 2005-07-15  Tom Tromey  <tromey@redhat.com>
 
+	* native/jni/classpath/classpath_jawt.h: New file.
+
+2005-07-15  Tom Tromey  <tromey@redhat.com>
+
 	* lib/libgcj.omit: Removed.
 
 2005-07-15  Lillian Angel  <langel@redhat.com>
